redmonkey discovered that I was using a Java 1.5 feature (Integer.valueOf()).
git-svn-id: https://schemaspy.svn.sourceforge.net/svnroot/schemaspy/trunk@278 e86a8a9b-1e1f-0410-8769-81452b7583c3